samples/_failures_safe/1761142047_703a7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94bc6790.c: In function ‘tokenize’:
./samples/SAFE/__tmp_94bc6790.c:140:30: error: expected ‘]’ at end of input
  140 |     strcpy(tokens[token_count
      |                              ^
      |                              ]
./samples/SAFE/__tmp_94bc6790.c:140:18: error: incompatible type for argument 1 of ‘strcpy’
  140 |     strcpy(tokens[token_count
      |            ~~~~~~^~~~~~~~~~~~
      |                  |
      |                  struct Token
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_94bc6790.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: expected ‘char * restrict’ but argument is of type ‘struct Token’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_94bc6790.c:140:5: error: too few arguments to function ‘strcpy’
  140 |     strcpy(tokens[token_count
      |     ^~~~~~
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_94bc6790.c:140:5: error: expected declaration or statement at end of input
  140 |     strcpy(tokens[token_count
      |     ^~~~~~
